@@ -33,6 +33,7 @@ $ -> Language fix or change
  # Fixed issue [#20452] Turn off module debugging by default (Elin Waring).
  # Fixed issue [#20430] Multiple cache and performance related optimizations and bugfixes - results in 30% decrease on load times (Klas Berlič).
  # Fixed issue [#20318] Change confusing language in installer (Elin Waring).
+ # Fixed issue [#20386] [patch] update Hathor overrides with changes made to com_menu default_batch.php (Andrea Tarr).
 
 16-May-2010 Mark Dexter
 # [#20312] Access Control not implemented in menus
